# the-dyro-engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  docs.bat  generate.bat  run.bat
.github/workflows/: docs.yml
cmake/: check_stray_sources.cmake  compile_shaders.cmake  copy_content.cmake  docs_target.cmake  group_sources.cmake
docs/: Doxyfile  build_guides.py  buz-docs.css  dyx-docs.css  generate_docs.bat  header.html  reference_home.md
docs/doxygen-awesome/: VERSION.txt
docs/html/: adapter__selection_8h.html  adapter__selection_8h.js  adapter__selection_8h_source.html  annotated.html  annotated_dup.js  assert_8h.html  assert_8h.js  assert_8h_source.html  classdyro_1_1command__queue-members.html  classdyro_1_1command__queue.html  classdyro_1_1command__queue.js  classdyro_1_1descriptor__heap-members.html  classdyro_1_1descriptor__heap.html  classdyro_1_1descriptor__heap.js  classdyro_1_1device-members.html  classdyro_1_1device.html  classdyro_1_1device.js  classdyro_1_1engine-members.html  classdyro_1_1engine.html  classdyro_1_1engine.js  classdyro_1_1game-members.html  classdyro_1_1game.html  classdyro_1_1game.js  classdyro_1_1input-members.html  classdyro_1_1input.html  classdyro_1_1input.js  classdyro_1_1pso__cache-members.html  classdyro_1_1pso__cache.html  classdyro_1_1pso__cache.js  classdyro_1_1renderer__2d-members.html  classdyro_1_1renderer__2d.html  classdyro_1_1renderer__2d.js  classdyro_1_1shader__library-members.html  classdyro_1_1shader__library.html  classdyro_1_1shader__library.js  classdyro_1_1swap__chain-members.html  classdyro_1_1swap__chain.html  classdyro_1_1swap__chain.js  classdyro_1_1texture-members.html  classdyro_1_1texture.html  (+213 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  (+105 more)
docs/pages/: camera_2d.md  drawing.md  getting_started.md  guided_experiences.md  index.md  input.md  json.md  logging_and_data.md  sprite_animation.md  textures_and_fonts.md  under_the_hood.md  utilities.md
docs/site/: about.html  index.html
docs/site/assets/: site.css  site.js
shaders/: sprite_ps.hlsl  sprite_vs.hlsl
source/engine/: CMakeLists.txt
source/engine/private/application/: engine.cpp  input.cpp  window.cpp
source/engine/private/core/: assert.cpp  json.cpp  log.cpp  noise.cpp  paths.cpp  random.cpp
source/engine/private/graphics/: adapter_selection.cpp  command_queue.cpp  d3d_utils.h  descriptor_heap.cpp  device.cpp  pso_cache.cpp  renderer_2d.cpp  shader_library.cpp  shader_model.cpp  swap_chain.cpp  texture_loader.cpp
source/engine/public/application/: engine.h  game.h  input.h  window.h
source/engine/public/core/: assert.h  json.h  log.h  math.h  math_2d.h  noise.h  paths.h  random.h  rect.h  timer.h
source/engine/public/graphics/: adapter_selection.h  command_queue.h  descriptor_heap.h  device.h  font.h  pso_cache.h  renderer_2d.h  shader_library.h  shader_model.h  swap_chain.h  texture.h  texture_loader.h
source/game/: CMakeLists.txt
source/game/private/: demo_game.cpp  demo_game.h
source/games/: CMakeLists.txt
source/games/buz_game/: CMakeLists.txt
source/games/buz_game/private/: demo_game.cpp  demo_game.h  main.cpp
source/games/dyro_game/: CMakeLists.txt
source/games/dyro_game/private/: demo_game.cpp  demo_game.h  main.cpp
source/games/dyx_game/: CMakeLists.txt
source/games/dyx_game/private/: demo_game.cpp  demo_game.h  main.cpp
source/games/simple_game/: CMakeLists.txt
source/games/simple_game/private/: main.cpp  simple_game.cpp  simple_game.h
source/tools/: CMakeLists.txt
source/tools/shader_compiler/: CMakeLists.txt
source/tools/shader_compiler/private/: shader_compiler_main.cpp
